Fixed alignment on login and search box in right sidebar.

--- a/style.css
+++ b/style.css
@@ -286,20 +286,31 @@ form#login_login-main.login-form.login-form-side {
     border-width: 0px !important;
     border-color: gray !important;
     font-size: 11px !important;
+    width: 98% !important; /* same as search box */
+}
+
+.login-form-side input[type=text], .login-form-side input[type=password] {
+	width: 140px !important;   
+	margin: 0px !important;
 }
 
 .login-form-side input[type=text] {
-    margin: 0px 0px 0px 0px !important;   
-    width: 144px !important;    
+    float: left !important;
 }
 
 .login-form-side input[type=password] {
-    margin: 0px 0px 0px 6px !important;   
+    float: right !important;  
 }
 
 .login-form-side input:focus {
     color: black !important;
 }
+
+.login-form-side .submit button {
+    border-radius: 0px !important;
+    margin-right: -3px !important;
+}
+
 
 /*****************************
 ******* CONTENT GENERAL ******
@@ -1197,10 +1208,6 @@ span.score {
 
 .res-nightmode .with-listing-chooser.listing-chooser-collapsed .content{
     margin-left: 15px !important; /* otherwise a small part of the sidebar border will be cut off */
-}
-
-.res-nightmode .login-form-side input[type=text] {
-    width: 147px !important;    
 }
 
 /**********************************
